--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     ]
   },
   "dependencies": {
+    "polished": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
     "styled-components": "^5.2.0",
-    "polished": "^4.0.2"
+    "typescript": "~3.7.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -40,6 +42,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
