Criação da página de jogo, com estrutura e estilo com styled components, e funções vazias que executarão a regra de negócio

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "jest": {
+    "collectCoverageFrom": []
+  },
   "browserslist": {
     "production": [
       ">0.2%",
