--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:coverage": "yarn test --coverage --watchAll false",
     "eject": "react-scripts eject",
     "prettier": "prettier --write ./src"
@@ -15,7 +15,9 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/pages/**/*.tsx"
+      "src/pages/**/*.tsx",
+      "src/utils/*.ts",
+      "!src/routes/index.tsx"
     ]
   },
   "browserslist": {
@@ -31,19 +33,23 @@
     ]
   },
   "dependencies": {
+    "@testing-library/user-event": "^12.1.8",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "polished": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@types/enzyme": "^3.10.7",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -61,6 +67,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "^2.0.4"
   }
 }
